// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with selected tags 1`] = `
<MultiSelect
  elements={
    [
      "foo",
      "bar",
      "baz",
    ]
  }
  filterSelected={[Function]}
  legend="select_tags"
  listSize={10}
  onSearch={[Function]}
  onSelect={[Function]}
  onUnselect={[Function]}
  placeholder="search.search_for_tags"
  renderLabel={[Function]}
  selectedElements={
    [
      "bar",
    ]
  }
  validateSearchInput={[Function]}
/>
`;

exports[`should render without tags at all 1`] = `
<MultiSelect
  elements={[]}
  filterSelected={[Function]}
  legend="select_tags"
  listSize={10}
  onSearch={[Function]}
  onSelect={[Function]}
  onUnselect={[Function]}
  placeholder="search.search_for_tags"
  renderLabel={[Function]}
  selectedElements={[]}
  validateSearchInput={[Function]}
/>
`;
